exports[`test renders correctly 1`] = `
<div
  className="bkfdwK"
  onClick={[Function]}>
  <img
    alt="Soup Can"
    src="can.jpg" />
  <figcaption>
    Soup Can
  </figcaption>
</div>
`;

exports[`test renders in the selected state 1`] = `
<div
  className="CbrRL"
  onClick={[Function]}>
  <img
    alt="Soup Can"
    src="can.jpg" />
  <figcaption>
    Soup Can
  </figcaption>
</div>
`;
